Repaired og-image and page loading on mobile devices. Version 1.0.0

--- a/app/globals.css
+++ b/app/globals.css
@@ -77,7 +77,7 @@ body {
 .slider-container {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  animation: slide 15s infinite linear;
+  animation: slide 17.5s infinite linear;
 }
 
 .slide img {
